--- a/last.html
+++ b/last.html
@@ -15,6 +15,7 @@
         <div class="left-reg">
             <p class="p1">Login Successful!</p>
             <a href="log.html" class="linklog"> Log out</a> 
+            <a href="home.html" class="linklog2">Show Users Data</a>
         </div>
           
     </div>
@@ -45,6 +46,8 @@
             document.getElementById("displayName").textContent = "No data available";
             document.getElementById("displayEmail").textContent = "No data available";
         }
+
+          
     </script>
 
 
